// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar avatar with photo render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Avatar-root Avatar-xsmall"
    >
      <img
        alt="Photo alt text"
        class="Image-root Avatar-image Avatar-square Avatar-xsmall Avatar-clippedCorner"
        src="http://example.png"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar avatar with text render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Avatar-root Avatar-xsmall"
    >
      <div
        class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
      />
      <p
        class="MuiTypography-root Typography-invert Typography-bodyInherit MuiTypography-body1 Avatar-text"
      >
        JR
      </p>
    </div>
  </div>
</div>
`;
